gen/v24.3/rpk/rpk-cluster-info.adoc
= rpk cluster info
:description: rpk cluster info

Request broker metadata information.

The Kafka protocol's metadata contains information about brokers, topics, and
the cluster as a whole.

This command only runs if specific sections of metadata are requested. There
are currently three sections: the cluster, the list of brokers, and the topics.
If no section is specified, this defaults to printing all sections.

If the topic section is requested, all topics are requested by default unless
some are manually specified as arguments. Expanded per-partition information
can be printed with the -d flag, and internal topics can be printed with the -i
flag.

In the broker section, the controller node is suffixed with *.

== Usage

[,bash]
----
rpk cluster info [flags]
----

== Aliases

[,bash]
----
info, status, metadata
----

== Flags

[cols="1m,1a,2a"]
|===
|*Value* |*Type* |*Description*

|-h, --help |- |Help for info.

|-b, --print-brokers |- |Print brokers section.

|-c, --print-cluster |- |Print cluster section.

|-d, --print-detailed-topics |- |Print per-partition information for topics (implies -t).

|-i, --print-internal-topics |- |Print internal topics (if all topics requested, implies -t).

|-t, --print-topics |- |Print topics section (implied if any topics are specified).

|--config |string |Redpanda or rpk config file; default search paths are `/var/lib/redpanda/.config/rpk/rpk.yaml`, `$PWD/redpanda.yaml`, and `/etc/redpanda/redpanda.yaml`.

|-X, --config-opt |stringArray |Override rpk configuration settings; '-X help' for detail or '-X list' for terser detail.

|--profile |string |rpk profile to use.

|-v, --verbose |- |Enable verbose logging.
|===